packet-wsm.c: add support for WAVE Short Message
WAVE Short Message (WSM) dissector generated from ASN.1 files
Ref. IEEE Std. 1609.3 - 2016

Signed-off-by: Steve Kwon <steve@wayties.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2776,6 +2776,7 @@ AC_CONFIG_FILES(
   epan/dissectors/asn1/tetra/Makefile
   epan/dissectors/asn1/ulp/Makefile
   epan/dissectors/asn1/wlancertextn/Makefile
+  epan/dissectors/asn1/wsm/Makefile
   epan/dissectors/asn1/x2ap/Makefile
   epan/dissectors/asn1/x509af/Makefile
   epan/dissectors/asn1/x509ce/Makefile
