--- a/epan/dissectors/Makefile.am
+++ b/epan/dissectors/Makefile.am
@@ -195,6 +195,7 @@ ASN1_DISSECTOR_SRC = \
 	packet-tetra.c		\
 	packet-ulp.c		\
 	packet-wlancertextn.c	\
+	packet-wsm.c		\
 	packet-x2ap.c		\
 	packet-x509af.c		\
 	packet-x509ce.c		\
@@ -1761,6 +1762,7 @@ DISSECTOR_INCLUDES = \
 	packet-wccp.h		\
 	packet-windows-common.h	\
 	packet-wlancertextn.h	\
+	packet-wsm.h		\
 	packet-wps.h		\
 	packet-wsp.h		\
 	packet-wtls.h		\
