--- a/epan/dissectors/Makefile.am
+++ b/epan/dissectors/Makefile.am
@@ -740,6 +740,7 @@ DISSECTOR_SRC = \
 	packet-idp.c		\
 	packet-idrp.c		\
 	packet-iec104.c		\
+	packet-ieee1609.c	\
 	packet-ieee1722.c	\
 	packet-ieee17221.c	\
 	packet-ieee80211-netmon.c	\
