--- a/epan/dissectors/CMakeLists.txt
+++ b/epan/dissectors/CMakeLists.txt
@@ -154,6 +154,7 @@ set(ASN1_DISSECTOR_SRC
 	packet-tetra.c
 	packet-ulp.c
 	packet-wlancertextn.c
+	packet-wsa.c
 	packet-wsm.c
 	packet-x2ap.c
 	packet-x509af.c
